--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <script type="module" src="app.ts"></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <img src="../assets/logo.png">
   </body>
 </html>
