--- a/src/index.html
+++ b/src/index.html
@@ -35,12 +35,95 @@
                 margin: 0px;
                 background-color: ghostwhite;
             }
+
+            #ui {
+                width: 720px;
+                height: 480px;
+                margin: 80px 120px 80px 120px;
+                position: absolute;
+                border: 4px solid #272736;
+                border-radius: 4px;
+                background-color: rgba(194, 194, 209);
+                text-align: center;
+                font-family: sans-serif;
+                display: block;
+            }
+
+            #shop {
+                display: flex;
+                height: 416px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .shop-label {
+                font-size: 48px;
+                margin-top: 16px;
+            }
+
+            .shop-item {
+                width: 72px;
+                height: 40px;
+                margin: 4px 0px 4px 200px;
+                display: flex;
+                flex-direction: row;
+                justify-content: right;
+                align-items: center;
+                font-size: 24px;
+            }
+
+            .button {
+                border: 4px solid #272736;
+                padding: 0px 24px 0px 24px;
+                margin: 0px 4px 0px 4px;
+            }
+
+            .item-label {
+                padding: 4px;
+            }
+
+            .power {
+                border: 24px solid #272736;
+                background: #272736;
+                border-radius: 50%;
+                width: 24px;
+                margin-left: 8px;
+                margin-right: 8px;
+            }
+
+            #ui-text {
+                margin: 24px;
+            }
         </style>
     </head>
 
     <body class="game-container">
         <div id="game">
             <canvas id="gameCanvas"></canvas>
+            <div id="ui">
+                <div class="shop-label">SHOP</div>
+                <div id="shop">
+                    <div class="shop-item">
+                        <div class="item-label">Speed</div>
+                        <div class="button">-</div>
+                        <div class="button">+</div>
+                        <div id="current-speed" class="button">0</div>
+                    </div>
+                    <div class="shop-item">
+                        <div class="item-label">Shield</div>
+                        <div class="button">-</div>
+                        <div class="button">+</div>
+                        <div id="current-shield" class="button">0</div>
+                    </div>
+                    <div class="shop-item">
+                        <div class="item-label">Multishot</div>
+                        <div class="button">-</div>
+                        <div class="button">+</div>
+                        <div id="current-shield" class="button">0</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
