--- a/src/index.html
+++ b/src/index.html
@@ -46,12 +46,14 @@
                 background-color: rgba(194, 194, 209);
                 text-align: center;
                 font-family: sans-serif;
-                display: block;
+                display: none; /* Set to display: flex to show the UI */
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-around;
             }
 
             #shop {
                 display: flex;
-                height: 416px;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
@@ -77,6 +79,8 @@
                 border: 4px solid #272736;
                 padding: 0px 24px 0px 24px;
                 margin: 0px 4px 0px 4px;
+                width: fit-content;
+                user-select: none;
             }
 
             .item-label {
@@ -106,23 +110,24 @@
                 <div id="shop">
                     <div class="shop-item">
                         <div class="item-label">Speed</div>
-                        <div class="button">-</div>
-                        <div class="button">+</div>
+                        <div class="button" onclick="onPowerUpChanged(0, -1)">-</div>
+                        <div class="button" onclick="onPowerUpChanged(0, 1)">+</div>
                         <div id="current-speed" class="button">0</div>
                     </div>
                     <div class="shop-item">
                         <div class="item-label">Shield</div>
-                        <div class="button">-</div>
-                        <div class="button">+</div>
+                        <div class="button" onclick="onPowerUpChanged(1, -1)">-</div>
+                        <div class="button" onclick="onPowerUpChanged(1, 1)">+</div>
                         <div id="current-shield" class="button">0</div>
                     </div>
                     <div class="shop-item">
                         <div class="item-label">Multishot</div>
-                        <div class="button">-</div>
-                        <div class="button">+</div>
-                        <div id="current-shield" class="button">0</div>
+                        <div class="button" onclick="onPowerUpChanged(2, -1)">-</div>
+                        <div class="button" onclick="onPowerUpChanged(2, 1)">+</div>
+                        <div id="current-multishot" class="button">0</div>
                     </div>
                 </div>
+                <div class="button">PLAY</div>
             </div>
         </div>
     </body>
