--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
                         <div id="current-multishot" class="button">0</div>
                     </div>
                 </div>
-                <div class="button">PLAY</div>
+                <div class="button" onclick="play()">PLAY</div>
             </div>
         </div>
     </body>
