--- a/src/index.html
+++ b/src/index.html
@@ -37,19 +37,24 @@
             }
 
             #ui {
+                position: absolute;
+                width: 960px;
+                height: 640px;
+                font-family: sans-serif;
+            }
+
+            #ui-shop {
                 width: 720px;
                 height: 480px;
-                margin: 80px 120px 80px 120px;
-                position: absolute;
+                background-color: rgba(194, 194, 209);
                 border: 4px solid #272736;
                 border-radius: 4px;
-                background-color: rgba(194, 194, 209);
-                text-align: center;
-                font-family: sans-serif;
-                display: none; /* Set to display: flex to show the UI */
+                margin: 80px 120px 80px 120px;
+                display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-around;
+                text-align: center;
             }
 
             #shop {
@@ -99,6 +104,13 @@
             #ui-text {
                 margin: 24px;
             }
+
+            #money {
+                position: absolute;
+                font-size: 24px;
+                right: 16px;
+                bottom: 16px;
+            }
         </style>
     </head>
 
@@ -106,28 +118,34 @@
         <div id="game">
             <canvas id="gameCanvas"></canvas>
             <div id="ui">
-                <div class="shop-label">SHOP</div>
-                <div id="shop">
-                    <div class="shop-item">
-                        <div class="item-label">Speed</div>
-                        <div class="button" onclick="onPowerUpChanged(0, -1)">-</div>
-                        <div class="button" onclick="onPowerUpChanged(0, 1)">+</div>
-                        <div id="current-speed" class="button">0</div>
+                <div id="ui-shop">
+                    <div class="shop-label">SHOP</div>
+                    <div id="shop">
+                        <div class="shop-item">
+                            <div class="item-label">Speed</div>
+                            <div class="button" onclick="onPowerUpChanged(0, -1)">-</div>
+                            <div class="button" onclick="onPowerUpChanged(0, 1)">+</div>
+                            <div id="current-speed" class="button">0</div>
+                        </div>
+                        <div class="shop-item">
+                            <div class="item-label">Shield</div>
+                            <div class="button" onclick="onPowerUpChanged(1, -1)">-</div>
+                            <div class="button" onclick="onPowerUpChanged(1, 1)">+</div>
+                            <div id="current-shield" class="button">0</div>
+                        </div>
+                        <div class="shop-item">
+                            <div class="item-label">Multishot</div>
+                            <div class="button" onclick="onPowerUpChanged(2, -1)">-</div>
+                            <div class="button" onclick="onPowerUpChanged(2, 1)">+</div>
+                            <div id="current-multishot" class="button">0</div>
+                        </div>
                     </div>
-                    <div class="shop-item">
-                        <div class="item-label">Shield</div>
-                        <div class="button" onclick="onPowerUpChanged(1, -1)">-</div>
-                        <div class="button" onclick="onPowerUpChanged(1, 1)">+</div>
-                        <div id="current-shield" class="button">0</div>
-                    </div>
-                    <div class="shop-item">
-                        <div class="item-label">Multishot</div>
-                        <div class="button" onclick="onPowerUpChanged(2, -1)">-</div>
-                        <div class="button" onclick="onPowerUpChanged(2, 1)">+</div>
-                        <div id="current-multishot" class="button">0</div>
-                    </div>
+                    <div class="button" onclick="play()">PLAY</div>
                 </div>
-                <div class="button" onclick="play()">PLAY</div>
+                <span id="money">
+                    Money:
+                    <span id="current-money">0</span>
+                </span>
             </div>
         </div>
     </body>
