--- a/src/index.html
+++ b/src/index.html
@@ -119,6 +119,7 @@
         <div id="game">
             <canvas id="background-canvas" class="pixel-canvas"></canvas>
             <canvas id="game-canvas" class="pixel-canvas"></canvas>
+            <canvas id="foreground-canvas" class="pixel-canvas"></canvas>
             <canvas id="offscreen-canvas" class="pixel-canvas"></canvas>
             <div id="ui">
                 <div id="ui-shop">
