shield fix + hide shop in first run

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                 align-items: center;
             }
 
-            .shop-label {
+            #shop-label {
                 font-size: 48px;
                 margin-top: 16px;
             }
@@ -148,7 +148,7 @@
                     <div id="current-progress"></div>
                 </div>
                 <div id="ui-shop">
-                    <div class="shop-label">SHOP</div>
+                    <div id="shop-label">SHOP</div>
                     <div id="shop">
                         <div class="shop-item">
                             <div class="item-label">Speed</div>
@@ -173,7 +173,7 @@
                 </div>
                 <span id="shield">
                     Shield:
-                    <span id="current-shield">0</span>
+                    <span id="current-player-shield">0</span>
                 </span>
                 <span id="money">
                     Money:
