--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
                             <div id="current-multishot" class="button">0</div>
                         </div>
                     </div>
-                    <div class="button" onclick="play()">PLAY</div>
+                    <div id="play" class="button" onclick="play()">PLAY</div>
                 </div>
                 <span id="shield">
                     Shield:
