--- a/src/index.html
+++ b/src/index.html
@@ -159,6 +159,7 @@
                                 +
                             </div>
                             <div id="current-speed" class="button">0</div>
+							<div id="speed-cost">10</div>
                         </div>
                         <div class="shop-item">
                             <div class="item-label">Shield</div>
@@ -169,6 +170,7 @@
                                 +
                             </div>
                             <div id="current-shield" class="button">0</div>
+							<div id="shield-cost">10</div>
                         </div>
                         <div class="shop-item">
                             <div class="item-label">Multishot</div>
@@ -187,6 +189,7 @@
                                 +
                             </div>
                             <div id="current-multishot" class="button">0</div>
+							<div id="multishot-cost">10</div>
                         </div>
                     </div>
                     <div id="play" class="button" onclick="play()">PLAY</div>
