hide shop while loading

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                 border: 4px solid #272736;
                 border-radius: 4px;
                 margin: 16px 200px 48px 200px;
-                display: flex;
+                display: none;
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-around;
@@ -159,7 +159,7 @@
                                 +
                             </div>
                             <div id="current-speed" class="button">0</div>
-							<div id="speed-cost">10</div>
+                            <div id="speed-cost">10</div>
                         </div>
                         <div class="shop-item">
                             <div class="item-label">Shield</div>
@@ -170,7 +170,7 @@
                                 +
                             </div>
                             <div id="current-shield" class="button">0</div>
-							<div id="shield-cost">10</div>
+                            <div id="shield-cost">10</div>
                         </div>
                         <div class="shop-item">
                             <div class="item-label">Multishot</div>
@@ -189,7 +189,7 @@
                                 +
                             </div>
                             <div id="current-multishot" class="button">0</div>
-							<div id="multishot-cost">10</div>
+                            <div id="multishot-cost">10</div>
                         </div>
                     </div>
                     <div id="play" class="button" onclick="play()">PLAY</div>
