--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,6 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                align-items: center;
             }
 
             #shop-label {
@@ -70,9 +69,8 @@
             }
 
             .shop-item {
-                width: 72px;
                 height: 40px;
-                margin: 4px 0px 4px 200px;
+                margin: 4px 0px 4px 0px;
                 display: flex;
                 flex-direction: row;
                 justify-content: right;
@@ -151,7 +149,7 @@
                     <div id="shop-label">SHOP</div>
                     <div id="shop">
                         <div class="shop-item">
-                            <div class="item-label">Speed</div>
+                            <div class="item-label">Rate of fire</div>
                             <div id="speed-minus" class="button" onclick="onPowerUpChanged(0, -1)">
                                 -
                             </div>
@@ -159,6 +157,7 @@
                                 +
                             </div>
                             <div id="current-speed" class="button">0</div>
+                            <span>Cost:&nbsp;</span>
                             <div id="speed-cost">10</div>
                         </div>
                         <div class="shop-item">
@@ -170,6 +169,7 @@
                                 +
                             </div>
                             <div id="current-shield" class="button">0</div>
+                            <span>Cost:&nbsp;</span>
                             <div id="shield-cost">10</div>
                         </div>
                         <div class="shop-item">
@@ -189,6 +189,7 @@
                                 +
                             </div>
                             <div id="current-multishot" class="button">0</div>
+                            <span>Cost:&nbsp;</span>
                             <div id="multishot-cost">10</div>
                         </div>
                     </div>
