--- a/src/index.html
+++ b/src/index.html
@@ -194,6 +194,7 @@
                         </div>
                     </div>
                     <div id="play" class="button" onclick="play()">PLAY</div>
+					<div id="Names">Adrian Lissot</br>Barthelemy Renucci</br>Florent Perez</div>
                 </div>
                 <span id="shield">
                     Shield:
